[package]
name = "lsclones"
description = "a command line utility to list clone and unique files and directories in your filesystem to help with sorting/cleaning"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
authors = ["Michel Pastor <shellixyz@gmail.com>"]
rust-version = "1.70.0"
repository = "https://github.com/shellixyz/lsclones"
homepage = "https://github.com/shellixyz/lsclones"
keywords = ["duplicate", "dupes", "search", "fclones", "clone"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"
publish = false

[[bin]]
name = "lsc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
bunt = "0.2.8"
clap = { version = "4.5.29", features = ["derive", "env"] }
coarsetime = "0.1.35"
crossterm = "0.28.1"
ctrlc = "3.4.5"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "into_iterator", "add", "constructor", "add_assign", "is_variant"] }
env_logger = "0.10.2"
fs-err = { git = "https://github.com/shellixyz/fs-err", branch = "custom", version = "3.0.0" }
getset = "0.1.4"
humantime = "2.1.0"
id_tree = "1.8.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.17"
num-format = "0.4.4"
ouroboros = "0.18.5"
path-absolutize = "3.1.1"
scopeguard = "1.2.0"
serde_json = "1.0.138"
size = "0.5.0"
strum = { version = "0.27.0", features = ["derive"] }
tap = "1.0.1"
thiserror = "2.0.11"
walkdir = "2.5.0"
